--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :menu_id %>
   </div>
   <div class="field">
-    <%= f.label :cart_id %><br>
-    <%= f.text_field :cart_id %>
+    <%= f.label :order_id %><br>
+    <%= f.text_field :order_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
