--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Cart:</strong>
-  <%= @line_item.cart %>
+  <strong>Order:</strong>
+  <%= @line_item.order %>
 </p>
 
 <%= link_to 'Edit', edit_line_item_path(@line_item) %> |
