--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Menu</th>
-      <th>Cart</th>
+      <th>Order</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
     <% @line_items.each do |line_item| %>
       <tr>
         <td><%= line_item.menu %></td>
-        <td><%= line_item.cart %></td>
+        <td><%= line_item.order %></td>
         <td><%= link_to 'Show', line_item %></td>
         <td><%= link_to 'Edit', edit_line_item_path(line_item) %></td>
         <td><%= link_to 'Destroy', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
