--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -51,7 +51,7 @@
                 <div class="breadcrumb-line">
                     <ul class="breadcrumb">
                         <li><a href="#"><i class="icon-home2 position-left"></i> Home</a></li>
-                        <li><a href="#">Order</a></li>
+                        <li><a href="#">Order, Reservation & Contact</a></li>
                         <li class="active">Reservations Management</li>
                     </ul>
                 </div>
